# 07-rex-robot-service

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py  schemas.py
app/models/: __init__.py  robot.py
app/routes/: __init__.py  auth.py  devices.py  fingerprints.py  health.py  robots.py
app/security/: __init__.py  crypto.py  fingerprint.py  jwt_manager.py
app/services/: __init__.py  fingerprint_service.py  robot_service.py
app/utils/: __init__.py  request_utils.py  response_utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_devices.py  test_fingerprints.py  test_robots.py
